--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,82 @@
-
-#Ignore thumbnails created by Windows
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
-#Ignore files built by Visual Studio
-*.obj
-*.exe
-*.pdb
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.tlb
-*.tlh
+
+# Editor files and directories
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.#*
+\#*#
+.*.swp
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
 *.bak
 *.cache
-*.ilk
-*.log
-[Bb]in
-[Dd]ebug*/
-*.lib
-*.sbr
-obj/
-[Rr]elease*/
-_ReSharper*/
-[Tt]est[Rr]esult*
-.vs/
-.idea/
-#Nuget packages folder
-packages/
+
+# Runtime files
+*.pid
+*.lock
+
+# Local configuration overrides
+config.local.*
+.env.local
+.env.*.local
+
+# Backup files
+*.orig
+*.rej
+
+# Compiled binaries (if any)
+*.exe
+*.o
+*.so
+*.dylib
+
+# Package files
+*.tar.gz
+*.zip
+*.rar
+
+# Documentation build artifacts
+docs/build/
+site/
+
+# Test coverage reports
+coverage/
+.coverage
+.nyc_output
+
+# Node.js (if any node tools are added)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python (if any python tools are added)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Systemd service files (users should create their own)
+*.service
